[gd_scene load_steps=6 format=2]

[ext_resource path="res://actors/player/side-scroll-player.svg" type="Texture" id=1]
[ext_resource path="res://actors/player/Player.gd" type="Script" id=2]
[ext_resource path="res://health/Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/player/PlayerKinematicBody.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="Health" parent="." instance=ExtResource( 3 )]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, -24 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 0, -24 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="HurtBox" type="Area2D" parent="KinematicBody2D"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/HurtBox"]
position = Vector2( 0, -24 )
shape = SubResource( 1 )

[node name="RecoverTimer" type="Timer" parent="KinematicBody2D/HurtBox"]
wait_time = 0.5
one_shot = true
[connection signal="depleted" from="Health" to="." method="_on_Health_depleted"]
[connection signal="body_entered" from="KinematicBody2D/HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="timeout" from="KinematicBody2D/HurtBox/RecoverTimer" to="." method="_on_RecoverTimer_timeout"]
